--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="search-button" onclick="getWeather()">See weather</div>
     </div>
     <div id="weather-container"></div>
-    <div id="containerFiveDays"></div>
+    <div id="fivedays-container"></div>
     <script src="index.js"></script>
   </body>
 </html>
